--- a/Kagle-Titanic Machine Learning from Disaster .ipynb
+++ b/Kagle-Titanic Machine Learning from Disaster .ipynb
@@ -65,9 +65,8 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "train=pd.read_csv(\"all/train.csv\")\n",
-    "test=pd.read_csv(\"all/test.csv\")\n",
-    "submit=pd.read_csv(\"all/gender_submission.csv\")"
+    "train=pd.read_csv(\"dataset/train.csv\")\n",
+    "test=pd.read_csv(\"dataset/test.csv\")"
    ]
   },
   {
